Add twitter user icon string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TwitterListView</string>
+    <string name="twitter_user_icon">twitter user icon</string>
 </resources>
